--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mawethuN.github.io/Portfolio-App/App.js",
+  "homepage": "https://mawethuN.github.io/Portfolio-App",
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
